# moltenth_decimal

./: CMakeLists.txt  Makefile  a.out  all_debug.txt  convertor (1).c  convertor.c  from_dec_to_128  from_dec_to_128.c  frtn  frtn.c  main  main.c  main.gcno  mine.c  mine.gcno  mine_from_int_to_decimal.c  mine_from_int_to_decimal.gcno  my_add  my_add.c  my_add.gcno  normalize.c  normalize.gcno  nullify.c  nullify.gcno  our_is_greater.c  s21_add.c  s21_add.gcno  s21_decimal.h  s21_decimal_tools  s21_decimal_tools.c  s21_decimal_tools.gcno  s21_div  s21_div.c  s21_div.gcno  s21_floor.c  s21_floor.gcno  s21_from_decimal_to_float.gcno  s21_from_decimal_to_int.c  s21_from_decimal_to_int.gcno  s21_from_float_to_decimal.c  (+28 more)
archive/: my_normalize.c  s21_from_decimal_to_float.c  s21_from_decimal_to_int.c  s21_is_equal.c  s21_is_greater.c  s21_negate.c  s21_truncate.c  test_s21_mul.c
frtn.dSYM/Contents/: Info.plist
frtn.dSYM/Contents/Resources/DWARF/: frtn
main.dSYM/Contents/Resources/DWARF/: main
main1/: main  main.c
main1/main.dSYM/Contents/Resources/DWARF/: main
s21_decimal_tools.dSYM/Contents/: Info.plist
s21_decimal_tools.dSYM/Contents/Resources/DWARF/: s21_decimal_tools
tests_files/: TEST.c  main_test.c  s21_add_test.c  s21_div_test.c  s21_mul_test.c  s21_sub_test.c  suits.h  test_add.c  test_s21_add.c  test_s21_decimal.c  test_s21_div.c  test_s21_div_generated.c  test_s21_floor.c  test_s21_from_decimal_to_float.c  test_s21_from_decimal_to_int.c  test_s21_from_float_to_decimal.c  test_s21_from_int_to_decimal.c  test_s21_is_equal.c  test_s21_is_greater.c  test_s21_is_greater_or_equal.c  test_s21_is_less.c  test_s21_is_less_or_equal.c  test_s21_is_not_equal.c  test_s21_mul.c  test_s21_negate.c  test_s21_round.c  test_s21_sub.c  test_s21_truncate.c
